src/objects/HW_CR_Build_Planning__c.object
<CustomObject>
    <description>Base FBR build planning object for creation of factory build request.  This is header data associated to a product family.  Product engineer records (PE) must be associated via use of the related object.</description>
    <fields>
        <fullName>ALT_Number__c</fullName>
        <description>If pilot requires Tianjin ALT, record ALT number here.</description>
        <inlineHelpText>If pilot requires Tianjin ALT, record ALT number here.</inlineHelpText>
        <label>ALT Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additionall_FBR_Detail__c</fullName>
        <description>Detail to help with factory build coordination; work instructions, shipping instructions, general FYI.  You may also upload documentation to assist with instructions and reference the document here.</description>
        <inlineHelpText>Detail to help with factory build coordination; work instructions, shipping instructions, general FYI.  You may also upload documentation to assist with instructions and reference the document here.</inlineHelpText>
        <label>Additionall FBR Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Build_Completion_Date__c</fullName>
        <description>Completion date of build.  Assumption is HW shipment information will be entered within a day of completion.</description>
        <inlineHelpText>Completion date of build.  Assumption is HW shipment information will be entered within a day of completion.</inlineHelpText>
        <label>Build Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Transceiver__c</fullName>
        <description>Actual hardware kit for build and distribution.</description>
        <inlineHelpText>Actual hardware kit for build and distribution.</inlineHelpText>
        <label>Build Transceiver</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFC_Flex_Required__c</fullName>
        <description>Do the units being constructed require customer SW.</description>
        <inlineHelpText>If customer SW is needed for testing, this should be &apos;Yes&apos;</inlineHelpText>
        <label>CFC Flex Required</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Central_Engineer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Engineer group contact with top interest in execution statuses.</description>
        <inlineHelpText>Engineer group contact with top interest in execution statuses.</inlineHelpText>
        <label>Central Engineer Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_CR_Build_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Flag__c</fullName>
        <description>Flag used to determine master build request status</description>
        <formula>IF(ISBLANK(Build_Completion_Date__c), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmed_Build_Qty__c</fullName>
        <description>Factory confirmed build quantity.  Issued PO(s) to match HW kit and total quantity.</description>
        <inlineHelpText>Factory confirmed build quantity.  Issued PO(s) to match HW kit and total quantity.</inlineHelpText>
        <label>Confirmed Build Qty</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_1_Ref_Des__c</fullName>
        <description>Product reference designation for electrical component 1</description>
        <inlineHelpText>Product reference designation for electrical component 1</inlineHelpText>
        <label>EE 1 Ref-Des</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_2_Ref_Des__c</fullName>
        <description>Product reference designation for electrical component 2</description>
        <inlineHelpText>Product reference designation for electrical component 2</inlineHelpText>
        <label>EE 2 Ref-Des</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_3_Ref_Des__c</fullName>
        <description>Product reference designation for electrical component 3</description>
        <inlineHelpText>Product reference designation for electrical component 3</inlineHelpText>
        <label>EE 3 Ref-Des</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Component_1__c</fullName>
        <description>Use the primary component listed within the PE record.</description>
        <label>EE Component 1</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Component_2__c</fullName>
        <description>Electrical component associated to engineering record 2</description>
        <inlineHelpText>Electrical component associated to engineering record 2</inlineHelpText>
        <label>EE Component 2</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Component_3__c</fullName>
        <description>Electrical component associated to engineering record 3</description>
        <inlineHelpText>Electrical component associated to engineering record 3</inlineHelpText>
        <label>EE Component 3</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer_Test_Record_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Test record for change associated to component number</description>
        <label>Engineer Test Record 1</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Assessment product has now related engineer requirement, check the product name and try again.</errorMessage>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Product_1__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Test_Required__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Final_Engineering_Status__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HW_Product_Engineer_Review__c</referenceTo>
        <relationshipLabel>HW CR Build Plans</relationshipLabel>
        <relationshipName>HW_CR_Build_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engineer_Test_Record_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>See description for Engineer_Test_Record_1</description>
        <label>Engineer Test Record 2</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product chosen does not have an engineering plan associated.  Verify the product information.</errorMessage>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Product_1__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Test_Required__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Final_Engineering_Status__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HW_Product_Engineer_Review__c</referenceTo>
        <relationshipLabel>HW CR Build Plans</relationshipLabel>
        <relationshipName>HW_CR_Build_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engineer_Test_Record_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>See description Engineering Test Record 1</description>
        <label>Engineer Test Record 3</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product selected does not have any pending engineering activity.  Check product name.</errorMessage>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Product_1__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Test_Required__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Final_Engineering_Status__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HW_Product_Engineer_Review__c</referenceTo>
        <relationshipLabel>HW CR Build Plans</relationshipLabel>
        <relationshipName>HW_CR_Build_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimate_Build_Start__c</fullName>
        <description>Field used to provide the initial estimate for build scheduled start  Factory to update scheduled start after capacity review.</description>
        <formula>IF( ISNULL(Scheduled_Build_Date__c)  ,  Ship_Date_Less_Seven__c,  Scheduled_Build_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate Build Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FBR_All_Day_Event__c</fullName>
        <formula>&quot;True&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FBR All Day Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Build_Record_Link__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FBR Build Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Calendar_End_Time__c</fullName>
        <description>End time of HW CR FBR</description>
        <formula>&quot;12:00:00&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FBR Calendar End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Calendar_Reminder__c</fullName>
        <formula>&quot;Off&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FBR Calendar Reminder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Calendar_Start_Time__c</fullName>
        <description>Time for google calendar export function.</description>
        <formula>&quot;12:00:00&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FBR Calendar Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Calendar_Subject__c</fullName>
        <description>Calendar subject name for import to Google.</description>
        <formula>Name  + &quot; &quot;  +   FBR_Product_Name_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FBR Calendar Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Product_Name_Assigned__c</fullName>
        <formula>Product_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FBR Product Name Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Ready_for_Build__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select once build plan is ready for factory scheduling</description>
        <inlineHelpText>Select once build plan is ready for factory scheduling</inlineHelpText>
        <label>FBR Ready for Build</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FBR_Reminder_Date__c</fullName>
        <formula>&quot;NA&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FBR Reminder Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Reminder_Time__c</fullName>
        <formula>&quot;12:00:00&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FBR Reminder Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Status_Sum__c</fullName>
        <description>Sum used to assess master status of FBR record</description>
        <formula>Completed_Flag__c +  Submit_Flag__c +  Planned_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FBR Status Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FBR_Status__c</fullName>
        <description>FBR status field to reflect current status of build request.</description>
        <formula>CASE( FBR_Status_Sum__c , 0, &quot;Pending&quot;, 1, &quot;Submitted&quot;, 2, &quot;Scheduled&quot;, &quot;Complete&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FBR status field to reflect current status of build request.</inlineHelpText>
        <label>FBR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_TOP_Build_Comments__c</fullName>
        <description>Factory TOP or ASE team members build summary.</description>
        <inlineHelpText>Factory TOP or ASE team members build summary.</inlineHelpText>
        <label>Factory TOP Build Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Factory_Test_Reports__c</fullName>
        <description>Entry used to highlight any reporting desired by engineering.  For instance, board test summary.</description>
        <inlineHelpText>Entry used to highlight any reporting desired by engineering.  For instance, board test summary.</inlineHelpText>
        <label>Factory Test  Reports</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HW_CR_Build_Allocation_Comment__c</fullName>
        <description>Details surrounding ship quantities and allocation.  Specifics listed within the product engineer (PE) record.</description>
        <inlineHelpText>Details surrounding ship quantities and allocation.  Specifics listed within the product engineer (PE) record.</inlineHelpText>
        <label>HW CR Build Allocation Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW_CR_Build_Quantity__c</fullName>
        <description>Total quantity for pilot build.</description>
        <inlineHelpText>Total quantity for pilot build.</inlineHelpText>
        <label>HW CR Build Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HW_Change_Request_Base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Base Change Request Record (HCR) for direct reference.</description>
        <label>HW Change Request Base</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Top_Eng_Review_Status__c</field>
                <operation>equals</operation>
                <value>&quot;Review Pending&quot;</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>HW_Product_Engineer_Review__c</referenceTo>
        <relationshipLabel>HW CR Build Plans (HW Change Request Base)</relationshipLabel>
        <relationshipName>HW_CR_Build_PlansCdk2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Join_Product__c</fullName>
        <description>Product field used for joining engineering record to build request</description>
        <formula>IF( Product_Name__c = null, &quot; &quot;,  Product_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Join Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_EE_Engineer__c</fullName>
        <description>Entry for listing key EE engineer who can be contacted with questions.  Format for entry: John Smith-core id.  (John Smith-WLJS00)</description>
        <inlineHelpText>Entry for listing key EE engineer who can be contacted with questions.  Format for entry: John Smith-core id.  (John Smith-WLJS00)</inlineHelpText>
        <label>Key EE Engineer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_ME_engineer__c</fullName>
        <description>Entry for listing key ME engineer who can be contacted with questions.  Format for entry: John Smith-core id.  (John Smith-WLJS00)</description>
        <inlineHelpText>Entry for listing key ME engineer who can be contacted with questions.  Format for entry: John Smith-core id.  (John Smith-WLJS00)</inlineHelpText>
        <label>Key ME engineer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_SW_Engineer__c</fullName>
        <description>Entry for listing key SW engineer who can be contacted with questions.  Format for entry: John Smith-core id.  (John Smith-WLJS00)</description>
        <inlineHelpText>Entry for listing key SW engineer who can be contacted with questions.  Format for entry: John Smith-core id.  (John Smith-WLJS00)</inlineHelpText>
        <label>Key SW Engineer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_1_Parent_Assb__c</fullName>
        <description>If mechanical part not directly used by MMI manufacturing, reference the next highest kit number purchased for use by manufacturing.</description>
        <inlineHelpText>If mechanical part not directly used by MMI manufacturing, reference the next highest kit number purchased for use by manufacturing.</inlineHelpText>
        <label>ME 1 Parent Assb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_2_Parent_Assb__c</fullName>
        <description>If mechanical part not directly used by MMI manufacturing, reference the next highest kit number purchased for use by manufacturing.</description>
        <inlineHelpText>If mechanical part not directly used by MMI manufacturing, reference the next highest kit number purchased for use by manufacturing.</inlineHelpText>
        <label>ME 2 Parent Assb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_3_Parent_Assb__c</fullName>
        <description>If mechanical part not directly used by MMI manufacturing, reference the next highest kit number purchased for use by manufacturing.</description>
        <inlineHelpText>If mechanical part not directly used by MMI manufacturing, reference the next highest kit number purchased for use by manufacturing.</inlineHelpText>
        <label>ME 3 Parent Assb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_Component_1__c</fullName>
        <description>Mechanical component associated to engineering record 1</description>
        <inlineHelpText>Mechanical component associated to engineering record 1</inlineHelpText>
        <label>ME Component 1</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_Component_2__c</fullName>
        <description>Mechanical component associated to engineering record 2</description>
        <inlineHelpText>Mechanical component associated to engineering record 2</inlineHelpText>
        <label>ME Component 2</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_Component_3__c</fullName>
        <description>Mechanical component associated to engineering record 3</description>
        <inlineHelpText>Mechanical component associated to engineering record 3</inlineHelpText>
        <label>ME Component 3</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_Test_Record_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Engineering build and test requirements for ME component 1</description>
        <inlineHelpText>Engineering build and test requirements for ME component 1</inlineHelpText>
        <label>ME Test Record 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Product_Name__c</field>
                <operation>equals</operation>
                <valueField>HW_Product_Engineer_Review__c.Product_1__c</valueField>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Test_Required__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Final_Engineering_Status__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>HW_Product_Engineer_Review__c</referenceTo>
        <relationshipLabel>HW CR Build Plans (ME Test Record 1)</relationshipLabel>
        <relationshipName>HW_CR_Build_Plans5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ME_Test_Record_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Engineering build and test requirements for ME component 2</description>
        <inlineHelpText>Engineering build and test requirements for ME component 2</inlineHelpText>
        <label>ME Test Record 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Product_Name__c</field>
                <operation>equals</operation>
                <valueField>HW_Product_Engineer_Review__c.Product_1__c</valueField>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Test_Required__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Final_Engineering_Status__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>HW_Product_Engineer_Review__c</referenceTo>
        <relationshipLabel>HW CR Build Plans (ME Test Record 2)</relationshipLabel>
        <relationshipName>HW_CR_Build_Plans6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ME_Test_Record_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Engineering build and test requirements for ME component 3</description>
        <inlineHelpText>Engineering build and test requirements for ME component 3</inlineHelpText>
        <label>ME Test Record 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Product_Name__c</field>
                <operation>equals</operation>
                <valueField>HW_Product_Engineer_Review__c.Product_1__c</valueField>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Test_Required__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Final_Engineering_Status__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>HW_Product_Engineer_Review__c</referenceTo>
        <relationshipLabel>HW CR Build Plans (ME Test Record 3)</relationshipLabel>
        <relationshipName>HW_CR_Build_Plans7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_1_Ship_Quantity__c</fullName>
        <description>Quantity shipping against PO number 1.</description>
        <inlineHelpText>Quantity shipping against PO number 1.</inlineHelpText>
        <label>PO 1 Ship Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_1_Ship_Tracking__c</fullName>
        <description>Shipment tracking information for PO 1.</description>
        <inlineHelpText>Shipment tracking information for PO 1.</inlineHelpText>
        <label>PO 1 Ship Tracking</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_1__c</fullName>
        <description>PO for HW distribution.</description>
        <label>PO 1</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_2_Ship_Quantity__c</fullName>
        <description>HW ship quantity against PO number 2.</description>
        <inlineHelpText>HW ship quantity against PO number 2.</inlineHelpText>
        <label>PO 2 Ship Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_2_Ship_Tracking__c</fullName>
        <description>Shipment tracking information for PO 2.</description>
        <inlineHelpText>Shipment tracking information for PO 2.</inlineHelpText>
        <label>PO 2 Ship Tracking</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_2__c</fullName>
        <description>PO used for HW distribution</description>
        <label>PO 2</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_3_Ship_Quantity__c</fullName>
        <description>HW quantity shipping against PO 3.</description>
        <inlineHelpText>HW quantity shipping against PO 3.</inlineHelpText>
        <label>PO 3 Ship Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_3_Ship_Tracking__c</fullName>
        <description>Shipment tracking information for PO 3.</description>
        <inlineHelpText>Shipment tracking information for PO 3.</inlineHelpText>
        <label>PO 3 Ship Tracking</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_3__c</fullName>
        <description>PO for hardware distribution</description>
        <label>PO 3</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Flag__c</fullName>
        <description>Used to determine build request master status</description>
        <formula>IF(ISBLANK(Scheduled_Build_Date__c), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Family for use in build planning</description>
        <inlineHelpText>Product Family for use in build planning</inlineHelpText>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>HW CR Build Plans</relationshipLabel>
        <relationshipName>HW_CR_Build_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of product to be used for assessment.</description>
        <label>Product Name</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>HW CR Build Plans</relationshipLabel>
        <relationshipName>HW_CR_Build_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Blank_1__c</fullName>
        <label>Reporting Blank 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Ship_Date__c</fullName>
        <description>Requested HW ship date.  Necessary to meet approval need-by dates.</description>
        <inlineHelpText>Requested HW ship date.</inlineHelpText>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required_XCVR__c</fullName>
        <description>If a specific test XCVR is required, enter this information (i.e. SJUG####AA).</description>
        <inlineHelpText>If a specific test XCVR is required, enter this information (i.e. SJUG####AA).</inlineHelpText>
        <label>Required XCVR</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Requirements__c</fullName>
        <description>Section used to highlight SW requirements.  If HW change is associated to SW CR, the baseline containing this CR should be specifically noted.</description>
        <inlineHelpText>Software Requirements (PA Table link, Bootloader, SW Version, Reflash File, etc).  If no special SW need, then enter &quot;Production&quot;</inlineHelpText>
        <label>SW Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_Build_Date__c</fullName>
        <description>Planned start date of build</description>
        <inlineHelpText>Planned start date of build</inlineHelpText>
        <label>Scheduled Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Date_Less_Seven__c</fullName>
        <formula>Requested_Ship_Date__c -7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship Date Less Seven</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submit_Flag__c</fullName>
        <description>Used for assessing build request master status</description>
        <formula>IF( FBR_Ready_for_Build__c = True, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Factory Technical Operations Contact.  Person responsible for monitoring build schedule, performance, and completion.</description>
        <inlineHelpText>Factory Technical Operations Contact.  Person responsible for monitoring build schedule, performance, and completion.</inlineHelpText>
        <label>TOP Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_CR_Build_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transceiver_Cost__c</fullName>
        <description>Transfer cost of hardware kit</description>
        <inlineHelpText>Transfer cost of hardware kit</inlineHelpText>
        <label>Transceiver Cost</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>XCVR_Security__c</fullName>
        <description>This is the HW security established by IC fusing.  Most units should be engineering secure, for testing, with a production IMEI or MEID.</description>
        <inlineHelpText>Engineering Secure=Open for engineering debug or SW reflashing.
Customer Secure=Locked, will only accept certain SW reflash
Non-Secure=Open for engineering AND software debug.  Full prototype unit.</inlineHelpText>
        <label>XCVR Security</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering Secure</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Secure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Secure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>HW CR Build Planning</label>
    <listViews>
        <fullName>ALL1</fullName>
        <columns>NAME</columns>
        <columns>Product_Family__c</columns>
        <columns>FBR_Status__c</columns>
        <columns>HW_CR_Build_Quantity__c</columns>
        <columns>Requested_Ship_Date__c</columns>
        <columns>Scheduled_Build_Date__c</columns>
        <columns>Additionall_FBR_Detail__c</columns>
        <columns>Build_Completion_Date__c</columns>
        <columns>Build_Transceiver__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Family__c</columns>
        <columns>FBR_Status__c</columns>
        <columns>HW_CR_Build_Quantity__c</columns>
        <columns>Requested_Ship_Date__c</columns>
        <columns>Scheduled_Build_Date__c</columns>
        <columns>Additionall_FBR_Detail__c</columns>
        <columns>Build_Completion_Date__c</columns>
        <columns>Build_Transceiver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requested_Ship_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/28/2012</value>
        </filters>
        <label>ALL 2013 for chart</label>
    </listViews>
</CustomObject>